<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7B6F6F"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_margin="40dp"
                android:background="@drawable/bordure"
                android:gravity="center"
                android:text="@string/bienvenue"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/demarrer"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="100dp"
                android:text="@string/lancer_le_jeu"
                android:onClick="demarrer"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#020000"
                app:backgroundTint="#00BCD4"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/charger"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="76dp"
                android:text="@string/charger_une_partie"
                android:onClick="Charger"
                android:textColor="#000000"
                android:textColorHint="#000000"
                app:backgroundTint="#00BCD4" />

            <Button
                android:id="@+id/effacer_sauvegarde"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="76dp"
                android:text="@string/effacer_une_partie"
                android:onClick="SupprimerSauvegarde"
                android:textColor="#000000"
                android:textColorHint="#FFFFFF"
                app:backgroundTint="#00BCD4" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>